'file conversion module done'

--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "express-graphql": "^0.6.11",
     "graphql": "^0.12.3",
     "graphql-tools": "^2.16.0",
-    "json2yaml": "^1.1.0"
+    "json2yaml": "^1.1.0",
+    "brew": "0.0.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
